#########################
#
# Version 2.1
#
#########################
- Merged PHP Server Monitor Plus project by Luiz Alberto S. Ribeiro (https://github.com/madeinnordeste/PHP-Server-Monitor-Plus).
-- New layout (thanks to twitter bootstrap)
- Support for mosms provider by Andreas Ek (https://github.com/EkAndreas/PHP-Server-Monitor-Plus/commit/105c734a02477befc01831e3b9b2b8fefd9b5ca5).
- Language files are now automatically detected, instead of a hardcoded list.
- Adding Korean language file (thanks to Ik-Jun).

#########################
#
# Version 2.0.1
# October 29, 2011
#
#########################
- Adding German language file (thanks to Brunbaur Herbert).
- Adding French language file (thanks to David Ribeiro).
- classes/sm/smUpdaterStatus.class.php: the curl option CURLOPT_CUSTOMREQUEST has been changed to CURLOPT_NOBODY.
- Servers page: auto refresh can be configured at the config page.
- Servers page: if the server is a website, the "Domain/Ip" field will be a link to the website.
- New text message gateway: Clickatell.com (thanks to Simon).
- If cURL is not installed, the install.php script will throw an error.
- HTTP status codes 5xx will also be treated as error.

#########################
#
# Version 2.0.0
# October 19, 2009
#
#########################
- Server type ("service" or "website").
- Different types of notification.
- New text message gateways.
- Code rewrite.
- New layout.
- Check for updates function.

#########################
#
# Version 1.0.1
# September 18, 2008
#
#########################
- log.php
- tpl/log.tpl.html
- Select order by clause used datetime field after DATE_FORMAT had been performed,
resulting in a wrong list of log entries shown.