@@ -124,11 +124,6 @@
         </fieldset>
       </form>
 </div>
-<script type="text/javascript">
-    $(document).bind('ready', function(){
-        $('#nav_option_config').addClass('active');
-    });
-</script>
 <!--%%tpl_config-->
 
 <!--%tpl_config_update-->
