@@ -19,11 +19,6 @@
         </div>
     </div>
 </div>
-<script type="text/javascript">
-    $(document).bind('ready', function(){
-        $('#nav_option_log').addClass('active');
-    });
-</script>
 <!--%%tpl_log_list-->
 
 <!--%tpl_log_entries-->
