@@ -61,11 +61,6 @@
         </tbody>
     </table>
 </div>
-<script type="text/javascript">
-    $(document).bind('ready', function(){
-        $('#nav_option_servers').addClass('active');
-    });
-</script>
 <!--%%tpl_servers_list-->
 
 
@@ -136,9 +131,4 @@
         </fieldset>
     </form>
 </div>
-<script type="text/javascript">
-    $(document).bind('ready', function(){
-        $('#nav_option_servers').addClass('active');
-    });
-</script>
 <!--%%tpl_servers_update-->
