@@ -40,11 +40,6 @@
         </tbody>
      </table>
 </div>
-<script type="text/javascript">
-$(document).bind('ready', function(){
-    $('#nav_option_users').addClass('active');
-});
-</script>
 <!--%%tpl_users_list-->
 
 <!--%tpl_users_update-->
@@ -93,9 +88,4 @@ $(document).bind('ready', function(){
          </fieldset>
     </form>
 </div>
-<script type="text/javascript">
-$(document).bind('ready', function(){
-    $('#nav_option_users').addClass('active');
-});
-</script>
 <!--%%tpl_users_update-->
